# astrovela_vane

./: .git_archival.txt  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  COMPATIBILITY.md  CONTRIBUTING.md  DEVELOPMENT.md  DUCKDB_SOURCE_ID  GOVERNANCE.md  MAINTAINERS.md  NOTICE  README.md  RELEASE.md  SECURITY.md  SOURCE_PROVENANCE.md  THIRD_PARTY.md  build_backend.py  pyproject.toml  vcpkg.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  code_quality.yml  coverage.yml  docs-follow-up.yml  packaging_sdist.yml  packaging_wheels.yml  pr-title.yml  release.yml  security.yml  submodule_auto_pr.yml  targeted_test.yml
LICENSES/: vcpkg-binary-dependencies.txt
_duckdb-stubs/: __init__.pyi
_vane_duckdb-stubs/: __init__.pyi  _func.pyi  _sqltypes.pyi
adbc_driver_duckdb/: dbapi.py
benchmarking/: __init__.py  bench_function_udf_ray_task_backend.py  bench_inflight.py  bench_udf_subprocess_pool.py
benchmarking/common_crawl/: extract.py
benchmarking/tpcds/: datagen.py
benchmarking/tpch/: __main__.py  answers.py  answers_sql.py  data_generation.py  generate_tpch_data.py  generate_tpch_data_parallel.py  pipelined_data_generation.py  ray_job_runner.py  run_tpch_duckdb.py  run_tpch_duckdb_native_relapi.py  run_tpch_duckdb_ray.py  run_tpch_duckdb_ray_relapi.py  run_tpch_vane.py  run_tpch_vane_ray_relapi.py  show_distributed_plans.py  subprefix_s3_files.py
benchmarking/vector/: __init__.py  parity_template.py
benchmarking/vllm/: config.py  continuous-batch-sorted.py  continuous-batch.py  generate_data.py  minimal_actor_bench.py  multi_caller_bench.py  naive-batch-sorted.py  naive-batch.py  prefix-bucketing.py  python_only_bench.py  ray-data.py  vane-continuous-batch-sorted.py  vane-continuous-batch.py  vane-naive-batch-sorted.py  vane-naive-batch.py  vane-prefix-bucketing.py  vane_common.py
cmake/: duckdb_loader.cmake  exported_symbols.version
duckdb/: __init__.py  _ray_cxx.py  _ray_errors.py  _ray_progress_env.py  _vane_session.py  _version.py  bytes_io_wrapper.py  dependencies.py  event_loop.py  expressions.py  filesystem.py  pickle.py  polars_io.py  series.py  udf.py
duckdb/datasource/: __init__.py  video_reader.py
duckdb/execution/: _common.py  _udf_runtime.py  ray_stream_adapter.py  ref_bundle.py  udf.py  udf_output_schema.py  udf_ray.py  udf_ray_actor_pool.py  udf_ray_actor_runtime.py  udf_ray_actor_state.py  udf_ray_config.py  udf_ray_env.py  udf_ray_ref_bundle.py  udf_ray_remote_lifecycle.py  udf_ray_remote_readiness.py  vllm.py  (+12 more)
duckdb_packaging/: _versioning.py  build_backend.py  pypi_cleanup.py  setuptools_scm_version.py
examples/: common_crawl.py  image_generation.py  llms_red_pajamas.py  minhash_dedupe.py  multimodal_structured_outputs.py  querying_images.py  ray_worker_example.py  voice_ai_analytics.py
multimodal_inference_benchmarks/: README.md  check_fte_production_readiness.py  run_fte_chaos_benchmarks.py  run_fte_full_matrix.py  run_fte_release_gate.py
scripts/: bootstrap_manylinux_bison.sh  bootstrap_vcpkg.sh  cache_data.json  check_release_artifacts.py  check_source_license_headers.py  format  generate_connection_methods.py  generate_connection_stubs.py  generate_connection_wrapper_methods.py  generate_connection_wrapper_stubs.py  generate_import_cache_cpp.py  generate_import_cache_json.py  get_cpp_methods.py  imports.py  run_fast_tests.sh  run_native_tests.sh  run_release_tests.sh  summarize_junit.py  sync_duckdb_source_id.py  sync_vcpkg_licenses.py  verify_base_install.py
sqllogic/: conftest.py  test_sqllogic.py
src/duckdb_py/: CMakeLists.txt  ai_sql_functions.cpp  datasource_function.cpp  datasource_function.hpp  duckdb_python.cpp  map.cpp  path_like.cpp  pyconnection.cpp  pyexpression.cpp  pyrelation.cpp  pyresult.cpp  pyresult_source.cpp  python_dependency.cpp  python_import_cache.cpp  python_replacement_scan.cpp  python_udf.cpp  python_udf_actor_resources.cpp  python_udf_utils.cpp  udf_executor.cpp  vllm_executor.cpp
src/duckdb_py/arrow/: arrow_array_stream.cpp  arrow_export_utils.cpp
src/duckdb_py/include/duckdb_python/: ai_sql_functions.hpp  filesystem_object.hpp  pyfilesystem.hpp  pyrelation.hpp  pyresult.hpp  pyresult_source.hpp  python_udf_actor_resources.hpp  python_udf_utils.hpp  pytype.hpp  udf_executor.hpp  vllm_executor.hpp
src/duckdb_py/include/duckdb_python/arrow/: arrow_array_stream.hpp
src/duckdb_py/include/duckdb_python/expression/: pyexpression.hpp
src/duckdb_py/include/duckdb_python/import_cache/: python_import_cache.hpp  python_import_cache_modules.hpp
src/duckdb_py/include/duckdb_python/import_cache/modules/: vane_module.hpp
src/duckdb_py/include/duckdb_python/pybind11/: gil_wrapper.hpp  python_object_container.hpp  registered_py_object.hpp
src/duckdb_py/include/duckdb_python/pybind11/conversions/: pyconnection_default.hpp
src/duckdb_py/include/duckdb_python/pyconnection/: pyconnection.hpp
src/duckdb_py/jupyter/: jupyter_progress_bar_display.cpp
src/duckdb_py/native/: python_conversion.cpp
src/duckdb_py/numpy/: type.cpp
src/duckdb_py/pandas/: scan.cpp
src/duckdb_py/pyconnection/: type_creation.cpp
src/duckdb_py/pyexpression/: initialize.cpp
src/duckdb_py/pyrelation/: initialize.cpp
src/duckdb_py/ray/: CMakeLists.txt  distributed_plan_bindings.cpp  logical_plan_bindings.cpp  native_fragment_executor.cpp  ray_module.cpp  result_stream_bindings.cpp  safe_pyobject.hpp  task.cpp  task.hpp  worker.cpp  worker.hpp  worker_manager.cpp  worker_manager.hpp
src/duckdb_py/typing/: pytype.cpp
src/duckdb_py/vane-runners/: CMakeLists.txt  vane_runners.cpp
tests/: conftest.py
vane/: __init__.py  _dbapi_type_object.py  _duckdb_api.py  _duckdb_func.py  _env.py  _expression_udf.py  _expressions.py  _ray_cxx.py  _typing.py  _vane_version.py  _version.py  bytes_io_wrapper.py  cls.py  config.py  dependencies.py  func.py  pickle.py  polars_io.py  udf.py
vane_adbc_driver_duckdb/: __init__.py  dbapi.py
(+630 files in other folders)
